--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.0.4",
+    "firebase": "5.0.1",
+    "firebaseui": "^3.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-firebaseui": "^3.0.4",
     "react-scripts": "1.1.4"
   },
   "scripts": {
